2013-10-19 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	
	* Goodies/VCFViewer/VCFViewer.m
	Cast count to ints to please the format string
	* Goodies/adserver/adserver.m
	add missing parameter to format string

2013-09-03 Riccardo Mottola <rm@gnu.org>

	* Frameworks/Addresses/ADRecord.m
	Cast the result of copy which is itself to avoid warning.

2013-09-01 Riccardo Mottola <rm@gnu.org>

	* Frameworks/Addresses/AddressView/ADSinglePropertyView.m
	Check for class and then cast. By spec, the Record should be a Group.

2013-08-30 Riccardo Mottola <rm@gnu.org>

	* Frameworks/Addresses/ADRecord.m
	Fix warning.

2013-08-30 Riccardo Mottola <rm@gnu.org>

	* Frameworks/Addresses/ADLocalAddressBook.m
	Fix format string to unsigned long.

2013-05-15 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Frameworks/Addresses/ADImageLoading.h
	  add safeguard to prevent double inclusion
	* GNUmakefile, AddressManager/AddressManagerInfo.plist 
	  VERSION 0.4.9

2013-02-23 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Frameworks/AddressView/ADImageView.m
	* Frameworks/AddressView/ADPersonPropertyView+Events.m
	* Frameworks/AddressView/ADPersonView.m
	* Adapt to use NSDragOperation

2013-02-10 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* AddressManager/Controller.m
	* AddressManager/DragDropMatrix.h
	* AddressManager/DragDropMatrix.m
	* Frameworks/AddressView/ADPersonView.m
	* Frameworks/AddressView/ADSinglePropertyView.m
	* Frameworks/Addresses/ADPerson.m
	* Goodies/adserver/adserver.m
	  (unsigned) int -> NS(U)Integer and float -> CGFloat
	  and get rid of some other warnings emitted by clang

2012-04-24 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Goodies/GNUmakefile
	  allow explicit disabling of Goodies to be installed

2012-04-02 Riccardo Mottola <rm@gnu.org>

	* Frameworks/AddressView/ADPersonView.h
	* Frameworks/Addresses/ADAddressBook.h
	* Frameworks/Addresses/ADPublicAddressBook.h
	* Frameworks/Addresses/ADTypedefs.h